--- a/website/index.html
+++ b/website/index.html
@@ -25,20 +25,12 @@
     </div>
     <div class="ui small statistics custom-grid">
       <div class="statistic dollarComponent custom-grid-column-3">
-        <div class="value jj-pink" id="raisedYogscastDollars"> $ 0 </div>
-        <div class="label">Raised By The Yogscast</div>
-      </div>
-      <div class="statistic dollarComponent custom-grid-column-3">
-        <div class="value jj-pink" id="raisedFundraisersDollars"> $ 0 </div>
-        <div class="label">Raised From Fundraisers</div>
+        <div class="value jj-pink" id="averageDonationDollars"> $ 0.00 </div>
+        <div class="label">Average Donation</div>
       </div>
       <div class="statistic poundComponent custom-grid-column-3">
-        <div class="value jj-pink" id="raisedYogscastPounds"> £ 0 </div>
-        <div class="label">Raised By The Yogscast</div>
-      </div>
-      <div class="statistic poundComponent custom-grid-column-3">
-        <div class="value jj-pink" id="raisedFundraisersPounds"> £ 0 </div>
-        <div class="label">Raised From Fundraisers</div>
+        <div class="value jj-pink" id="averageDonationPounds"> £ 0.00 </div>
+        <div class="label">Average Donation</div>
       </div>
       <div class="statistic dollarComponent custom-grid-column-3">
         <div class="value jj-pink" id="raisedEntireDollars"> $ 0 </div>
@@ -57,14 +49,6 @@
       <div class="statistic custom-grid-column-3">
         <div class="value jj-pink" id="donationCount"> 0 </div>
         <div class="label">Donations</div>
-      </div>
-      <div class="statistic dollarComponent custom-grid-column-3">
-        <div class="value jj-pink" id="averageDonationDollars"> $ 0.00 </div>
-        <div class="label">Average Donation</div>
-      </div>
-      <div class="statistic poundComponent custom-grid-column-3">
-        <div class="value jj-pink" id="averageDonationPounds"> £ 0.00 </div>
-        <div class="label">Average Donation</div>
       </div>
     </div>
     <div class="center-row">
@@ -93,14 +77,8 @@
       <table class="ui large celled striped table unstackable" id="charitiesTable">
         <thead>
           <tr>
-            <th rowspan="2" style="width: 365px;">Charities</th>
-            <th colspan="3" style="width: 600px; min-width: 230px;" class="center aligned">Amount Raised</th>
-          </tr>
-          <tr>
-            <th class="center aligned" style="width: 200px; min-width: 93px; border-left: 1px solid rgba(34,36,38,.1);">
-              The Yogscast</th>
-            <th class="center aligned" style="width: 200px; min-width: 93px;">Fundraisers</th>
-            <th class="center aligned" style="width: 200px; min-width: 93px;">Total</th>
+            <th class="center aligned" style="width: 200px; min-width: 93px;">Charity</th>
+            <th class="center aligned" style="width: 80px; min-width: 93px;">Raised</th>
           </tr>
         <tbody></tbody>
       </table>
